--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/weathericons@2.1.0/css/weather-icons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@3.9.0/dist/fullcalendar.min.css" rel="stylesheet" />
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <style>
     #weatherWidget .currentDesc {
         color: #ffffff!important;
@@ -67,6 +68,7 @@
         }
 
     </style> 
+    
 </head>
 <body>
   <app-root></app-root>
